src/objects/c2g__codaIntersectDefinition__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpintersectdefinitiondef</customHelpPage>
    <description>Defines the way balances are stored.</description>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dimension 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FullAccountingCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Accounting Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Ledger Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local GLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UpdateReportingBalances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Secondary Balances</label>
        <type>Checkbox</type>
    </fields>
    <label>Intersect Definition</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__FullAccountingCode__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__LocalGLA__c</columns>
        <columns>c2g__Entity__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__Dimension2__c</columns>
        <columns>c2g__Dimension3__c</columns>
        <columns>c2g__Dimension4__c</columns>
        <columns>c2g__UpdateReportingBalances__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intersect Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intersect Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>